tests/specs/eval/error_and_exit/uncaught_error.out
error: Uncaught (in promise) Error: boom
throw new Error('boom')
      ^
    at file://[WILDCARD]$deno$eval.mts:1:7
